# flight-tracker-backend

./: .env.example  README.md  pyproject.toml
app/: auth.py  broadcaster.py  config.py  db.py  ingestor.py  main.py  persistence.py  state.py
app/routes/: aircraft.py  flights.py  stream.py
